crates/shuffle/tests/snapshots/scenario_fixtures__clock_window_filtering.snap
---
source: crates/shuffle/tests/scenario_fixtures.rs
expression: "Checkpoint { frontier: &frontier, read, }"
---
Checkpoint {
    frontier: Frontier {
        journals: [
            JournalFrontier {
                journal: "testing/apples/2020202020202020/category=alpha/pivot=00",
                binding: 0,
                producers: [
                    ProducerFrontier {
                        producer: Producer(01:00:00:00:00:01),
                        last_commit: Clock(0s 3000ns),
                        hinted_commit: Clock(0s 0ns),
                        offset: -257,
                    },
                ],
                bytes_read_delta: 257,
                bytes_behind_delta: 0,
            },
            JournalFrontier {
                journal: "testing/bananas/2020202020202020/category=alpha/pivot=00",
                binding: 1,
                producers: [
                    ProducerFrontier {
                        producer: Producer(01:00:00:00:00:01),
                        last_commit: Clock(0s 3000ns),
                        hinted_commit: Clock(0s 0ns),
                        offset: -257,
                    },
                ],
                bytes_read_delta: 257,
                bytes_behind_delta: 0,
            },
        ],
        flushed_lsn: [
            1/0,
        ],
        latest_backfill_begin: {},
        latest_backfill_complete: {},
        binding_gap_floors: {},
        unresolved_hints: 0,
    },
    read: [
        ReadEntry {
            binding: 1,
            journal: "testing/bananas/2020202020202020/category=alpha/pivot=00",
            doc: Object {
                "_meta": Object {
                    "uuid": String("13814014-1dd2-11b2-8001-010000000001"),
                },
                "category": String("alpha"),
                "id": String("naf-banana"),
                "value": Number(2),
            },
        },
    ],
}
