crates/shuffle/tests/snapshots/scenario_fixtures__control_docs_are_metadata_only.snap
---
source: crates/shuffle/tests/scenario_fixtures.rs
expression: "Checkpoint { frontier: &frontier, read, }"
---
Checkpoint {
    frontier: Frontier {
        journals: [
            JournalFrontier {
                journal: "testing/apples/2020202020202020/category=alpha/pivot=00",
                binding: 0,
                producers: [
                    ProducerFrontier {
                        producer: Producer(01:00:00:00:00:11),
                        last_commit: Clock(0s 4000ns),
                        hinted_commit: Clock(0s 0ns),
                        offset: -426,
                    },
                ],
                bytes_read_delta: 426,
                bytes_behind_delta: 0,
            },
        ],
        flushed_lsn: [
            1/0,
        ],
        latest_backfill_begin: {
            0: Clock(0s 3000ns),
        },
        latest_backfill_complete: {
            0: Clock(0s 3000ns),
        },
        binding_gap_floors: {},
        unresolved_hints: 0,
    },
    read: [
        ReadEntry {
            binding: 0,
            journal: "testing/apples/2020202020202020/category=alpha/pivot=00",
            doc: Object {
                "_meta": Object {
                    "uuid": String("1381400a-1dd2-11b2-8001-010000000011"),
                },
                "category": String("alpha"),
                "id": String("data"),
                "value": Number(7),
            },
        },
    ],
}
