crates/shuffle/tests/snapshots/scenario_fixtures__gapped_continue_trigger_resumed.snap
---
source: crates/shuffle/tests/scenario_fixtures.rs
expression: "Checkpoint { frontier: &frontier2, read: read2, }"
---
Checkpoint {
    frontier: Frontier {
        journals: [
            JournalFrontier {
                journal: "testing/apples/2020202020202020/category=alpha/pivot=00",
                binding: 0,
                producers: [
                    ProducerFrontier {
                        producer: Producer(03:00:00:00:00:02),
                        last_commit: Clock(0s 3000ns),
                        hinted_commit: Clock(0s 0ns),
                        offset: -388,
                    },
                ],
                bytes_read_delta: 185,
                bytes_behind_delta: 0,
            },
        ],
        flushed_lsn: [
            1/0,
        ],
        latest_backfill_begin: {},
        latest_backfill_complete: {},
        binding_gap_floors: {},
        unresolved_hints: 0,
    },
    read: [
        ReadEntry {
            binding: 0,
            journal: "testing/apples/2020202020202020/category=alpha/pivot=00",
            doc: Object {
                "_meta": Object {
                    "uuid": String("1381400a-1dd2-11b2-8001-030000000002"),
                },
                "category": String("alpha"),
                "id": String("gc-p2a"),
                "value": Number(21),
            },
        },
        ReadEntry {
            binding: 0,
            journal: "testing/apples/2020202020202020/category=alpha/pivot=00",
            doc: Object {
                "_meta": Object {
                    "uuid": String("13814014-1dd2-11b2-8001-030000000002"),
                },
                "category": String("alpha"),
                "id": String("gc-p2b"),
                "value": Number(22),
            },
        },
    ],
}
