crates/shuffle/tests/snapshots/scenario_fixtures__gapped_replay_checkpoint1.snap
---
source: crates/shuffle/tests/scenario_fixtures.rs
expression: "Checkpoint { frontier: &frontier1, read: read1, }"
---
Checkpoint {
    frontier: Frontier {
        journals: [
            JournalFrontier {
                journal: "testing/apples/2020202020202020/category=alpha/pivot=00",
                binding: 0,
                producers: [
                    ProducerFrontier {
                        producer: Producer(01:00:00:00:00:01),
                        last_commit: Clock(0s 1000ns),
                        hinted_commit: Clock(0s 0ns),
                        offset: -200,
                    },
                    ProducerFrontier {
                        producer: Producer(03:00:00:00:00:02),
                        last_commit: Clock(0s 4ns),
                        hinted_commit: Clock(0s 0ns),
                        offset: 0,
                    },
                ],
                bytes_read_delta: 200,
                bytes_behind_delta: 0,
            },
        ],
        flushed_lsn: [
            1/0,
        ],
        latest_backfill_begin: {},
        latest_backfill_complete: {},
        binding_gap_floors: {},
        unresolved_hints: 0,
    },
    read: [
        ReadEntry {
            binding: 0,
            journal: "testing/apples/2020202020202020/category=alpha/pivot=00",
            doc: Object {
                "_meta": Object {
                    "uuid": String("1381400a-1dd2-11b2-8000-010000000001"),
                },
                "category": String("alpha"),
                "id": String("g-p1"),
                "value": Number(10),
            },
        },
    ],
}
